# BonCam

./: .gitattributes  .gitignore  Cargo.toml  HANDOFF.md  LICENSE  README.md  WINDOWS_QUICKSTART.md  start.cmd  start.ps1
ios-app/: README.md
ios-app/IPhoneCamSender/: AppModel.swift  CaptureManager.swift  ContentView.swift  IPhoneCamSenderApp.swift  Info.plist  LaunchScreen.storyboard  Models.swift  PreviewImageEncoder.swift  StreamTransport.swift  VideoEncoder.swift
ios-app/IPhoneCamSender.xcodeproj/: project.pbxproj
scripts/: run-windows-host.ps1  setup-windows-firewall.ps1  show-windows-ip.ps1
shared/docs/: protocol.md
shared/protocol/: Cargo.toml
shared/protocol/src/: lib.rs
windows-host/: Cargo.toml  README.md
windows-host/src/: app.rs  control.rs  main.rs  pairing.rs  preview.rs  preview_http.rs  video.rs  virtual_camera.rs  webrtc_http.rs  webrtc_native.rs
windows-virtual-camera/: README.md
windows-virtual-camera/registrar/: build.ps1  register_virtual_camera.cpp  run-remove.ps1  run-start-all-users-system.ps1  run-start-all-users.ps1  run-start.ps1
windows-virtual-camera/source/: build-probe.ps1  build.ps1  install-machine.ps1  iphone_camera_source.cpp  iphone_camera_source.def  probe_device_reader.cpp  probe_dshow.cpp  probe_source_reader.cpp  register-machine.ps1  register-user.ps1  register.ps1  unregister.ps1  verify-registration.ps1
