[workspace]
members = [
    "shared/protocol",
    "windows-host",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

# Dependencies (openh264 decode, YUV->RGBA conversion, the webrtc/SRTP stack) are
# far too slow at -O0 to sustain live 30fps video under `cargo run`. Optimizing
# only dependencies keeps workspace rebuilds fast while making dev builds usable.
[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
