[package]
name = "windows-host"
edition.workspace = true
license.workspace = true
version.workspace = true
# The crate now has two binaries (windows-host + the synthetic_sender test tool),
# so a bare `cargo run -p windows-host` would be ambiguous. Pin the real host as
# the default so start.cmd and any plain `cargo run` keep working.
default-run = "windows-host"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
minifb = "0.28"
openh264 = { version = "0.9.3", features = ["source"] }
protocol = { path = "../shared/protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
webrtc = "0.17.1"
